# gsn-factory

./: .pre-commit-config.yaml  README.md  demo.ipynb  pyproject.toml  utils_notebook.py
configs/: evaluation.yaml  generate.yaml
configs/callbacks/: default.yaml
configs/data/: prompt.yaml
configs/debug/: debug_gpu.yaml  local_debug.yaml
configs/evaluation/: default.yaml
configs/experiment/aaai/: evaluation.yaml  evaluation_example_on_cluster.yaml
configs/experiment/aaai/sd14/: example_on_cluster_saga_one_distrib.yaml  saga_bbox_gsn_multi_distrib.yaml  saga_bbox_gsn_one_distrib.yaml  saga_bbox_multi_distrib.yaml  (+9 more)
configs/hydra/launcher/: submitit_example.yaml
configs/paths/: default.yaml
configs/pipeline/: default.yaml  sd14.yaml  sd3.yaml
configs/pipeline/scheduler/: FlowMatchEulerDiscreteScheduler.yaml  ddpm.yaml
configs/trainer/: auto.yaml
src/: evaluation.py  generate.py
src/data/: datamodule.py
src/eval/: __init__.py  utils.py
src/eval/ae_eval/: __init__.py  metrics_ae.py  utils.py
src/eval/aesthetics_score/: __init__.py  aesthetics.py
src/eval/clip_score/: __init__.py  clipscore.py
src/eval/vqa/: __init__.py  vqa.py
src/models/: generate_pipeline.py  gsn_config.py  gsn_tools.py  score_pipeline.py  utils.py  utils_distrib.py
src/models/gsn_criterion/: __init__.py  attend_and_excite.py  boxdiff.py  initno.py  iou.py  retention_loss.py  syngen.py  utils.py  utils_attention.py  utils_processing_attention_loss.py
src/models/pipeline/: __init__.py  flux_pipeline.py  pipeline_sdv1_v2.py  sd3_pipeline.py  sdxl_pipeline.py
src/utils/: rich_utils.py
(+5 files in other folders)
